#19 - feat: 웹소켓 기능 구현
- WebsocketConfig: 핸들러 및 인터셉터 등록
- HttpHandshakeInterceptor: URL 쿼리 파라미터 추출 역할
- ProgressWebSocketHandler: 웹소켓 생명주기(연결/종료) 관리
- WebSocketProgressService: 세션 관리 및 메시지 전송 유틸리티
- TransactionResultEventListener: 발행된 이벤트를 구독(Listen)하여, `WebSocketProgressService`를 통해 실제 메시지를 전송하도록 역할을 분리