@@ -1,10 +1,14 @@
 package com.simpaylog.generatorapi.service;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.simpaylog.generatorapi.dto.TransactionResultEvent;
+import com.simpaylog.generatorapi.dto.SimulationCompleteEvent;
 import com.simpaylog.generatorcore.entity.dto.TransactionUserDto;
 import com.simpaylog.generatorsimulator.dto.DailyTransactionResult;
 import com.simpaylog.generatorsimulator.service.TransactionService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDate;
@@ -19,9 +23,12 @@ import java.util.concurrent.*;
 public class TransactionSimulationExecutor {
 
     private final TransactionService transactionService;
+    private final ObjectMapper objectMapper;
+    private final ApplicationEventPublisher eventPublisher;
+
 
     public void simulateTransaction(List<TransactionUserDto> users, LocalDate from, LocalDate to) {
-        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+        try (ExecutorService executor = Executors.newFixedThreadPool(10)) {
 
             for (LocalDate date = from; !date.isAfter(to); date = date.plusDays(1)) {
                 List<DailyTransactionResult> dailyTransactionResults = processDailyTransactions(users, date, executor);
@@ -30,6 +37,8 @@ public class TransactionSimulationExecutor {
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
             throw new RuntimeException("트랜잭션 시뮬레이션 중단", e);
+        }  finally {
+            eventPublisher.publishEvent(new SimulationCompleteEvent("모든 시뮬레이션이 완료되었습니다."));
         }
     }
 
@@ -52,17 +61,18 @@ public class TransactionSimulationExecutor {
         return results;
     }
 
+    // TODO 클라이언트에서 작업 종료 기능 추가시 SessionId 추가 필요
     private void processDailyResults(LocalDate date, List<DailyTransactionResult> results) {
-        System.out.println("==== " + date + " 결과 요약 ====");
-        for (DailyTransactionResult result : results) {
-            System.out.printf("[%s] userId: %d, income: %d (%d회), spending: %d (%d회)\n",
-                    date,
-                    result.userId(),
-                    result.totalIncome(),
-                    result.incomeTransactionCount(),
-                    result.totalSpending(),
-                    result.spendingTransactionCount()
-            );
+        try {
+            String summaryMessage = String.format("==== %s 결과 요약 (총 %d건) ====", date, results.size());
+            eventPublisher.publishEvent(new TransactionResultEvent(summaryMessage));
+
+            for (DailyTransactionResult result : results) {
+                String jsonResult = objectMapper.writeValueAsString(result);
+                eventPublisher.publishEvent(new TransactionResultEvent(jsonResult));
+            }
+        } catch (Exception e) {
+            log.error("Failed to publish result event", e);
         }
     }
 }
